--- a/probability_shape_distributions.ipynb
+++ b/probability_shape_distributions.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "5bb7cf89",
+   "metadata": {},
+   "source": [
+    "# Calculating the absorption and scattering cross section using a probability distribution"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "935d1248",
    "metadata": {},
    "outputs": [
@@ -22,6 +30,20 @@
     "import scipy.integrate as spit\n",
     "import os\n",
     "print('hello world')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac35618d",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "### First, we specify which dust we are using"
    ]
   },
   {
@@ -55,6 +77,14 @@
     "    \n",
     "wavelen = wavelen**(-1) * 10000   #Convert wavelen2 to waveLENGTH from waveNUMBER\n",
     "print('hello world')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b8ff311",
+   "metadata": {},
+   "source": [
+    "### This defines the probability distribution"
    ]
   },
   {
@@ -112,6 +142,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6bc5b2f5",
+   "metadata": {},
+   "source": [
+    "### Now we define our volume function. v_avg is used to calculate sigma below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "47c3f86c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def volume_integrand_mrn(r, q):\n",
+    "    v = r**(-q)\n",
+    "    return v\n",
+    "\n",
+    "\n",
+    "rmin = 0.005\n",
+    "rmax = 0.25\n",
+    "q = 3.5\n",
+    "\n",
+    "r_integral = spit.quad(volume_integrand_mrn, rmin, rmax, args=q)\n",
+    "r_average = ((1/(rmax - rmin)) * r_integral[0])**(1/-q)\n",
+    "v_avg = (4./3.) * np.pi * r_average**3\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba15ca05",
+   "metadata": {},
+   "source": [
+    "### creates function that calculates Sigma, defined in eq 13 in Min et al 2003"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "f2fc664a",
@@ -139,6 +207,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bf3c1396",
+   "metadata": {},
+   "source": [
+    "### creates our bounds for our geometric factors. The bounds are the sides of a triangle in (l1, l2) space"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "b28b2101",
@@ -159,6 +235,14 @@
     "def bounds_l2(l1):\n",
     "    return [0,1-l1]\n",
     "print('hello world')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07d2ac26",
+   "metadata": {},
+   "source": [
+    "### This is where we calculate the absorption cross-section (Cabs). It creates an empty list, then calculates Cabs for a CDE distribution at each wavelength as described in Min 03, eqn 15. It then uses this to find the shape averaged mass absorption coefficient for particles of a given volume, as described in Min 03, eqn 39"
    ]
   },
   {
@@ -197,6 +281,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "17a3e30c",
+   "metadata": {},
+   "source": [
+    "### Same as above, using CDE2 distribution"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "7dbce244",
@@ -229,6 +321,14 @@
     "kappa_cde2 *= (2 * np.pi / (1e-4*wavelen)) / rho\n",
     "bb = time.time()\n",
     "print('This took {} seconds to run'.format(bb-aa))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "163bc5de",
+   "metadata": {},
+   "source": [
+    "### Same as above, using ERCDE distribution"
    ]
   },
   {
@@ -267,39 +367,64 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "f40065f2",
+   "cell_type": "markdown",
+   "id": "d97c4d69",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def volume_integrand_mrn(r, q):\n",
-    "    v = r**(-q)\n",
-    "    return v\n",
-    "\n",
-    "\n",
-    "rmin = 0.005\n",
-    "rmax = 0.25\n",
-    "q = 3.5\n",
-    "\n",
-    "r_integral = spit.quad(volume_integrand_mrn, rmin, rmax, args=q)\n",
-    "r_average = ((1/(rmax - rmin)) * r_integral[0])**(1/-q)\n",
-    "v_avg = (4./3.) * np.pi * r_average**3\n",
-    "\n"
+    "### Here is where everything culminates. It gives us our required data in a table that can be input into DUSTY"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bcd2e79",
+   "id": "d3efd921",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Cabs_array = np.array((cabs_cde))\n",
+    "sig = np.array((sigma(m, wavelen, v_avg)))\n",
+    "Csca_array = Cabs_array/sig\n",
+    "\n",
+    "output = np.transpose((wavelen, Cabs_array, Csca_array))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf6758e6",
+   "metadata": {},
+   "source": [
+    "## This is where the text file is created with it's appropriate header"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96391c4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "line0 = f'standard mrn mixture (a_min = {rmin}, amax = {rmax})\\n'\n",
+    "line1 = f'dust, weight: {dust[:-3]}, {wt_a}; {dust2[:-3]}, {wt_b}; {dust3[:-3]}, {wt_c}\\n'\n",
+    "line2 = ' lambda \\t <C_abs>/v \\t <C_sca>/v\\n'\n",
+    "\n",
+    "f = open('look at this.dat', 'w')\n",
+    "f.write(line0)\n",
+    "f.write(line1)\n",
+    "f.write(line2)\n",
+    "# f.write(str(output))\n",
+    "\n",
+    "\n",
+    "for i in range(len(output)):\n",
+    "    f.write(f\"{output[i,0]} \\t {output[i,1]} \\t {output[i,2]}\\n\")\n",
+    "\n",
+    "\n",
+    "f.close()\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -313,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
