added test to see if two files are identical

--- a/probability_shape_distributions.ipynb
+++ b/probability_shape_distributions.ipynb
@@ -33,6 +33,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0e84b43",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "ac35618d",
    "metadata": {},
@@ -48,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "ee12046e",
    "metadata": {},
    "outputs": [
@@ -66,18 +74,122 @@
     "# this is the possible locations of where dust can be\n",
     "\n",
     "\n",
-    "nk_path = dust_dir[0]               #where the dust is \n",
-    "dust = 'oliv_nk_y.nk'                  #DUST NAME HERE #grf\n",
+    "nk_path = dust_dir[1]               #where the dust is \n",
+    "dust = 'sil-dlee.nk'                  #DUST NAME HERE #grf\n",
     "rho = 3.33 #grams cm**-3            #density\n",
     "pathy = os.path.join(nk_path, dust) #pipeline is open\n",
-    "wavelen, n_dust, k_dust = np.loadtxt(pathy, skiprows=12, unpack=True)\n",
+    "wavelen, n_dust, k_dust = np.loadtxt(pathy, skiprows=7, unpack=True)\n",
     "                                    #lamda, n, and k values are extracted\n",
     "m = np.array([complex(n_dust[i], k_dust[i]) for i in range(len(wavelen))])\n",
     "                                    #joins n, k values into complex number\n",
+    "\n",
     "    \n",
-    "wavelen = wavelen**(-1) * 10000   #Convert wavelen2 to waveLENGTH from waveNUMBER\n",
+    "# wavelen = wavelen**(-1) * 10000   #Convert wavelen2 to waveLENGTH from waveNUMBER\n",
+    "# uncomment the above line if the wavelength column is in wavenumber\n",
+    "\n",
     "print('hello world')\n",
     "#wavelen units are now MICRONS\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "3d893f34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "different\n"
+     ]
+    }
+   ],
+   "source": [
+    "import filecmp\n",
+    "pathdust1 = os.path.join(nk_path, 'grph1-dl.nk')\n",
+    "pathdust2 = os.path.join(nk_path, 'grph2-dl.nk')\n",
+    "filecmp.cmp(pathdust1, pathdust2, shallow=True)\n",
+    "\n",
+    "with open(pathdust1) as f1:\n",
+    "    with open(pathdust2) as f2:\n",
+    "        if f1.read() == f2.read():\n",
+    "            print('they are the same')\n",
+    "        else:\n",
+    "            print('different')\n",
+    "\n",
+    "# f1.close()\n",
+    "# f2.close()\n",
+    "# for i in range(len(pathdust1)):\n",
+    "#     print(str(pathdust1[i]) + \" \" + str(pathdust2[i]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "4f8a27fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    1.95000E+01    1.80610E+00    3.40700E-01\n",
+      " vs     1.95000E+01    7.49400E+00    9.00500E+00\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "f1 = open(pathdust1)\n",
+    "f2 = open(pathdust2)\n",
+    "lines_f1 = [line for line in f1]\n",
+    "lines_f2 = [line for line in f2]\n",
+    "f1.close()\n",
+    "f2.close()\n",
+    "\n",
+    "\n",
+    "n = 865\n",
+    "print(\"{0} vs {1}\".format(lines_f1[n], lines_f2[n]))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "84798e09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1208\n",
+      "1208\n",
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "f1 = open(pathdust1)\n",
+    "f2 = open(pathdust2)\n",
+    "\n",
+    "# for x in f1 and f2:\n",
+    "#     print(x)\n",
+    "\n",
+    "print(len(f1.readlines()))\n",
+    "\n",
+    "print(len(f2.readlines()))\n",
+    "\n",
+    "\n",
+    "print(f1.readlines(0))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "f1.close()\n",
+    "f2.close()"
    ]
   },
   {
@@ -90,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "f45fc3a1",
    "metadata": {},
    "outputs": [
@@ -153,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "47c3f86c",
    "metadata": {},
    "outputs": [],
@@ -183,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "f2fc664a",
    "metadata": {},
    "outputs": [
@@ -218,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "b28b2101",
    "metadata": {},
    "outputs": [
@@ -249,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "312c3d18",
    "metadata": {},
    "outputs": [
@@ -257,7 +369,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This took 19.110923528671265 seconds to run\n"
+      "This took 59.25306224822998 seconds to run\n"
      ]
     }
    ],
@@ -300,7 +412,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This took 18.576597690582275 seconds to run\n"
+      "This took 57.84627676010132 seconds to run\n"
      ]
     }
    ],
@@ -335,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "880bba20",
    "metadata": {},
    "outputs": [
@@ -343,7 +455,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This took 20.929691791534424 seconds to run\n"
+      "This took 65.09752011299133 seconds to run\n"
      ]
     }
    ],
@@ -378,15 +490,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "id": "8e00c618",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.92207941e-03, 2.73630056e-03, 3.90083667e-03, 5.27939976e-03,\n",
+       "       5.22425116e-03, 3.82071289e-03, 3.10706876e-03, 2.41332211e-03,\n",
+       "       1.63323617e-03, 1.28748451e-03, 1.01750582e-03, 9.51117886e-04,\n",
+       "       5.56926163e-04, 2.69055932e-04, 1.78411183e-04, 1.22361327e-04,\n",
+       "       8.01769863e-05, 5.73526587e-05, 4.27626118e-05, 3.64736947e-05,\n",
+       "       3.38652812e-05, 3.15786792e-05, 2.66322354e-05, 2.59536974e-05,\n",
+       "       2.64743816e-05, 2.49866754e-05, 2.33968029e-05, 2.09278042e-05,\n",
+       "       1.98887242e-05, 1.83589887e-05, 1.68094801e-05, 1.53116898e-05,\n",
+       "       1.36415152e-05, 1.15473059e-05, 1.08664546e-05, 9.58635671e-06,\n",
+       "       8.58106560e-06, 7.77170175e-06, 6.30766328e-06, 5.39241499e-06,\n",
+       "       4.97466259e-06, 4.26512242e-06, 3.97182192e-06, 3.22347849e-06,\n",
+       "       3.00867360e-06, 2.71506018e-06, 2.40202236e-06, 2.41311156e-06,\n",
+       "       2.51444163e-06, 7.87786115e-06, 2.53886985e-05, 3.20266028e-05,\n",
+       "       3.11381241e-05, 2.90749029e-05, 2.02790899e-05, 1.35014793e-05,\n",
+       "       9.05999342e-06, 6.76055878e-06, 7.46279910e-06, 8.96771183e-06,\n",
+       "       1.05054081e-05, 1.13623896e-05, 1.11715715e-05, 1.01443511e-05,\n",
+       "       6.21908950e-06, 4.22501099e-06, 1.48929637e-06, 7.26233926e-07,\n",
+       "       3.41685711e-07, 1.47909224e-07, 8.23657828e-08, 3.63502623e-08,\n",
+       "       1.30265764e-08, 6.64116103e-09, 3.25153696e-09, 2.25790967e-09,\n",
+       "       1.44532848e-09, 8.13201765e-10])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "cabs_spheres = []\n",
+    "cabs_spheres_sildl = []\n",
     "for j in range(len(m)):\n",
-    "    cabs_spheres.append((2 * np.pi / (wavelen[j]))*v_avg*np.imag(3*(m[j]**2 - 1)/(m[j]**2 + 2)))\n",
-    "cabs_sph_array = np.array((cabs_spheres))"
+    "    cabs_spheres_sildl.append((2 * np.pi / (wavelen[j]))*v_avg*np.imag(3*(m[j]**2 - 1)/(m[j]**2 + 2)))\n",
+    "cabs_sph_array_sildl = np.array((cabs_spheres_sildl))\n",
+    "cabs_sph_array_sildl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e3c01a3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.0019220794143450328,\n",
+       " 0.0027363005553750434,\n",
+       " 0.003900836672429081,\n",
+       " 0.005279399763640871,\n",
+       " 0.005224251159049984,\n",
+       " 0.0038207128861429828,\n",
+       " 0.0031070687601267807,\n",
+       " 0.002413322112867528,\n",
+       " 0.0016332361737088498,\n",
+       " 0.0012874845110983245,\n",
+       " 0.0010175058194448437,\n",
+       " 0.0009511178862577195,\n",
+       " 0.0005569261634235798,\n",
+       " 0.00026905593171104597,\n",
+       " 0.0001784111827532324,\n",
+       " 0.0001223613270844736,\n",
+       " 8.017698634954792e-05,\n",
+       " 5.735265871323479e-05,\n",
+       " 4.2762611771189136e-05,\n",
+       " 3.647369471976102e-05,\n",
+       " 3.386528121062032e-05,\n",
+       " 3.157867923462804e-05,\n",
+       " 2.6632235372836983e-05,\n",
+       " 2.5953697424940502e-05,\n",
+       " 2.64743815760904e-05,\n",
+       " 2.4986675425017132e-05,\n",
+       " 2.3396802921983177e-05,\n",
+       " 2.092780420006484e-05,\n",
+       " 1.9888724172384826e-05,\n",
+       " 1.8358988661996064e-05,\n",
+       " 1.68094800805925e-05,\n",
+       " 1.531168982708189e-05,\n",
+       " 1.3641515153985862e-05,\n",
+       " 1.1547305926105447e-05,\n",
+       " 1.0866454572468858e-05,\n",
+       " 9.586356710988553e-06,\n",
+       " 8.581065599576821e-06,\n",
+       " 7.771701749034722e-06,\n",
+       " 6.307663282518726e-06,\n",
+       " 5.392414989034273e-06,\n",
+       " 4.974662594427115e-06,\n",
+       " 4.2651224203938225e-06,\n",
+       " 3.971821917079778e-06,\n",
+       " 3.2234784931288934e-06,\n",
+       " 3.0086735989650206e-06,\n",
+       " 2.7150601818206427e-06,\n",
+       " 2.4020223577683145e-06,\n",
+       " 2.413111560614719e-06,\n",
+       " 2.5144416335679108e-06,\n",
+       " 7.877861154695028e-06,\n",
+       " 2.5388698488958118e-05,\n",
+       " 3.202660275580406e-05,\n",
+       " 3.1138124109988e-05,\n",
+       " 2.9074902866080134e-05,\n",
+       " 2.0279089942167846e-05,\n",
+       " 1.3501479306999703e-05,\n",
+       " 9.059993422991642e-06,\n",
+       " 6.760558783886638e-06,\n",
+       " 7.462799095549011e-06,\n",
+       " 8.967711832898321e-06,\n",
+       " 1.0505408126326761e-05,\n",
+       " 1.136238964362574e-05,\n",
+       " 1.1171571506019906e-05,\n",
+       " 1.0144351062475153e-05,\n",
+       " 6.219089496531592e-06,\n",
+       " 4.225010989472829e-06,\n",
+       " 1.4892963672955488e-06,\n",
+       " 7.26233926017146e-07,\n",
+       " 3.416857110341067e-07,\n",
+       " 1.4790922385877864e-07,\n",
+       " 8.236578284701769e-08,\n",
+       " 3.635026231603231e-08,\n",
+       " 1.3026576441785828e-08,\n",
+       " 6.64116102734902e-09,\n",
+       " 3.251536957716107e-09,\n",
+       " 2.257909667787655e-09,\n",
+       " 1.4453284816526296e-09,\n",
+       " 8.132017647001133e-10]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cabs_spheres_grph = []\n",
+    "for j in range(len(m)):\n",
+    "    cabs_spheres_grph.append((2 * np.pi / (wavelen[j]))*v_avg*np.imag(3*(m[j]**2 - 1)/(m[j]**2 + 2)))\n",
+    "cabs_sph_array_grph = np.array((cabs_spheres_grph))\n",
+    "cabs_spheres_grph"
    ]
   },
   {
@@ -523,7 +768,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -537,7 +782,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
