making output files of graphite and sil dl to interpolate later

--- a/probability_shape_distributions.ipynb
+++ b/probability_shape_distributions.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f45fc3a1",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "47c3f86c",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "f2fc664a",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "b28b2101",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "36d4d2ed",
    "metadata": {},
    "outputs": [],
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "ee12046e",
    "metadata": {},
    "outputs": [
@@ -276,7 +276,7 @@
     "\n",
     "\n",
     "nk_path = dust_dir[1]               #where the dust is \n",
-    "dust = 'sil-dlee.nk'                  #DUST NAME HERE #grf\n",
+    "dust = 'grph1-dl.nk'                  #DUST NAME HERE #grf\n",
     "rho = 3.33 #grams cm**-3            #density\n",
     "pathy = os.path.join(nk_path, dust) #pipeline is open\n",
     "wavelen, n_dust, k_dust = np.loadtxt(pathy, skiprows=7, unpack=True)\n",
@@ -302,12 +302,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "id": "d3efd921",
    "metadata": {},
    "outputs": [],
    "source": [
-    "j = cabs(m, 'spheres', bounds_l2, bounds_l1)\n",
+    "disname = 'spheres'\n",
+    "j = cabs(m, disname, bounds_l2, bounds_l1)\n",
     "Cabs_array = np.array((j))\n",
     "Cabs_array *= (2 * np.pi / (wavelen)) * v_avg\n",
     "sig = np.array((sigma(m, wavelen, v_avg)))\n",
@@ -326,17 +327,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "id": "96391c4e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "line0 = f'standard mrn mixture (a_min = {rmin}, amax = {rmax})\\n'\n",
+    "# line0 = f'standard mrn mixture (a_min = {rmin}, amax = {rmax})\\n'\n",
     "# # line1 = f'dust, weight: {dust[:-3]}, {wt_a}; {dust2[:-3]}, {wt_b}; {dust3[:-3]}, {wt_c}\\n'\n",
     "line2 = ' lambda \\t <C_abs>/v \\t <C_sca>/v\\n'\n",
     "\n",
-    "f = open('look at this.dat', 'w')\n",
-    "f.write(line0)\n",
+    "f = open(dust[:-3]+disname+'.dat', 'w')\n",
+    "# f.write(line0)\n",
     "# f.write(line1)\n",
     "f.write(line2)\n",
     "# # f.write(str(output))\n",
