user can add multiple dust grain and shape distributions

--- a/probability_shape_distributions.ipynb
+++ b/probability_shape_distributions.ipynb
@@ -276,10 +276,10 @@
     "\n",
     "\n",
     "nk_path = dust_dir[1]               #where the dust is \n",
-    "dust = 'grph1-dl.nk'                  #DUST NAME HERE #grf\n",
+    "# dust = 'grph1-dl.nk'                  #DUST NAME HERE #grf\n",
     "rho = 3.33 #grams cm**-3            #density\n",
-    "pathy = os.path.join(nk_path, dust) #pipeline is open\n",
-    "wavelen, n_dust, k_dust = np.loadtxt(pathy, skiprows=7, unpack=True)\n",
+    "# pathy = os.path.join(nk_path, dust) #pipeline is open\n",
+    "# wavelen, n_dust, k_dust = np.loadtxt(pathy, skiprows=7, unpack=True)\n",
     "                                    #lamda, n, and k values are extracted\n",
     "m = np.array([complex(n_dust[i], k_dust[i]) for i in range(len(wavelen))])\n",
     "                                    #joins n, k values into complex number\n",
@@ -289,7 +289,40 @@
     "# uncomment the above line if the wavelength column is in wavenumber\n",
     "\n",
     "print('hello world')\n",
-    "#wavelen units are now MICRONS\n"
+    "#wavelen units are now MICRONS\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "dustlist = [('grph1-dl.nk', 'spheres'), ('sil-dlee.nk', 'CDE'), ('FeO.nk', 'CDE2')]\n",
+    "#this is where we list out the names of the dusts \n",
+    "for j in range(len(dustlist)):\n",
+    "    pathy = os.path.join(nk_path, dustlist[j][0]) #pipeline is open\n",
+    "    wavelen, n_dust, k_dust = np.loadtxt(pathy, skiprows=7, unpack=True)\n",
+    "    m = np.array([complex(n_dust[i], k_dust[i]) for i in range(len(wavelen))])\n",
+    "    cab = cabs(m, dustlist[j][1], bounds_l2, bounds_l1)\n",
+    "    Cabs_array = np.array((cab))\n",
+    "    Cabs_array *= (2 * np.pi / (wavelen)) * v_avg\n",
+    "    sig = np.array((sigma(m, wavelen, v_avg)))\n",
+    "    Csca_array = Cabs_array/sig\n",
+    "    output = np.transpose((wavelen, Cabs_array, Csca_array))\n",
+    "    f = open(dustlist[j][0][:-3]+dustlist[j][1]+'.dat', 'w')\n",
+    "    for i in range(len(output)):\n",
+    "        f.write(f\"{output[i,0]} \\t {output[i,1]} \\t {output[i,2]}\\n\")\n",
+    "    f.close()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -302,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "d3efd921",
    "metadata": {},
    "outputs": [],
@@ -315,6 +348,35 @@
     "Csca_array = Cabs_array/sig\n",
     "\n",
     "output = np.transpose((wavelen, Cabs_array, Csca_array))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "371018d0",
+   "metadata": {},
+   "source": [
+    "### Making sure the arrays are all the same size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e74b8ef5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
