working on tCDE distribution

--- a/probability_shape_distributions.ipynb
+++ b/probability_shape_distributions.ipynb
@@ -99,6 +99,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ffe9a8fb",
+   "metadata": {},
+   "source": [
+    "### I think it would be easier to make the tCDE its own function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74997615",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prob_tCDE(m1,m2,d):\n",
+    "    return 1/((1-d-m2)*(1-m1-m2-d) - 0.5*((1-d-m2)**2) - m1**2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6bc5b2f5",
    "metadata": {},
    "source": [
@@ -258,76 +277,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ee12046e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello world\n"
-     ]
-    }
-   ],
-   "source": [
-    "dust_dir = ['/home/physics/Research/DUSTY/DUSTY/Lib_nk/', \n",
-    "            \"C:/UTSA/Research/DUSTY/DUSTY/Lib_nk/\"]\n",
-    "# this is the possible locations of where dust can be\n",
-    "\n",
-    "\n",
-    "nk_path = dust_dir[0]               #where the dust is \n",
-    "# dust = 'grph1-dl.nk'                  #DUST NAME HERE #grf\n",
-    "rho = 3.33 #grams cm**-3            #density\n",
-    "# pathy = os.path.join(nk_path, dust) #pipeline is open\n",
-    "# wavelen, n_dust, k_dust = np.loadtxt(pathy, skiprows=7, unpack=True)\n",
-    "                                    #lamda, n, and k values are extracted\n",
-    "# m = np.array([complex(n_dust[i], k_dust[i]) for i in range(len(wavelen))])\n",
-    "                                    #joins n, k values into complex number\n",
-    "\n",
-    "    \n",
-    "# wavelen = wavelen**(-1) * 10000   #Convert wavelen2 to waveLENGTH from waveNUMBER\n",
-    "# uncomment the above line if the wavelength column is in wavenumber\n",
-    "\n",
-    "print('hello world')\n",
-    "#wavelen units are now MICRONS\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "dustlist = [('grph1-dl.nk', 'spheres'), ('sil-dlee.nk', 'CDE'), ('FeO.nk', 'CDE2')]\n",
-    "#this is where we list out the names of the dusts \n",
-    "for j in range(len(dustlist)):\n",
-    "    pathy = os.path.join(nk_path, dustlist[j][0]) #pipeline is open\n",
-    "    wavelen, n_dust, k_dust = np.loadtxt(pathy, skiprows=7, unpack=True)\n",
-    "    m = np.array([complex(n_dust[i], k_dust[i]) for i in range(len(wavelen))])\n",
-    "    cab = cabs(m, dustlist[j][1], bounds_l2, bounds_l1)\n",
-    "    Cabs_array = np.array((cab))\n",
-    "    Cabs_array *= (2 * np.pi / (wavelen)) * v_avg\n",
-    "    sig = np.array((sigma(m, wavelen, v_avg)))\n",
-    "    Csca_array = Cabs_array/sig\n",
-    "    output = np.transpose((wavelen, Cabs_array, Csca_array))\n",
-    "    f = open(dustlist[j][0][:-3]+dustlist[j][1]+'.dat', 'w')\n",
-    "    for i in range(len(output)):\n",
-    "        f.write(f\"{output[i,0]} \\t {output[i,1]} \\t {output[i,2]}\\n\")\n",
-    "    f.close()\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "id": "9c54e7fa",
    "metadata": {},
    "outputs": [
@@ -413,134 +362,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "c0ac2b38",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.99969 +2.381e-05j, 0.999683+2.491e-05j, 0.999676+2.605e-05j, ...,\n",
-       "       9.221   +9.209e+00j, 9.274   +9.263e+00j, 9.327   +9.316e+00j])"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "wavelen, n_dust, k_dust = np.loadtxt(pathy, skiprows=7, unpack=True)\n",
-    "m = np.array([complex(n_dust[i], k_dust[i]) for i in range(len(wavelen))])\n",
-    "m\n",
-    "# cab = cabs(m, 'spheres', bounds_l2, bounds_l1)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "0792f92f",
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d97c4d69",
-   "metadata": {},
-   "source": [
-    "### Here is where everything culminates. It gives us our required data in a table that can be input into DUSTY"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "d3efd921",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "disname = 'spheres'\n",
-    "j = cabs(m, disname, bounds_l2, bounds_l1)\n",
-    "Cabs_array = np.array((j))\n",
-    "Cabs_array *= (2 * np.pi / (wavelen)) * v_avg\n",
-    "sig = np.array((sigma(m, wavelen, v_avg)))\n",
-    "Csca_array = Cabs_array/sig\n",
-    "\n",
-    "output = np.transpose((wavelen, Cabs_array, Csca_array))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "371018d0",
-   "metadata": {},
-   "source": [
-    "### Making sure the arrays are all the same size"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "e74b8ef5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "weights = []\n",
-    "\n",
-    "#what i want to do\n",
-    "#open the files I want to use\n",
-    "#take the wavelength range we are interested in    (0.2 - 500 um)\n",
-    "#interpolate all values to that wavelength range\n",
-    "# j=0\n",
-    "# a1 = np.loadtxt(dustlist[j][0][:-3]+dustlist[j][1]+'.dat')\n",
-    "\n",
-    "lam_final = np.geomspace(0.2, 500, num=500)\n",
-    "\n",
-    "\n",
-    "dustlist = [('grph1-dl.nk', 'spheres'), ('sil-dlee.nk', 'CDE'), ('FeO.nk', 'CDE2')]\n",
-    "namelist = [dustlist[j][0][:-3]+dustlist[j][1]+'.dat' for j in range(len(dustlist))]\n",
-    "\n",
-    "total_array = np.ndarray((3,len(lam_final),len(dustlist)))\n",
-    "\n",
-    "total_array[:,:,0] = lam_final\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cf6758e6",
-   "metadata": {},
-   "source": [
-    "## This is where the text file is created with it's appropriate header"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "96391c4e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# line0 = f'standard mrn mixture (a_min = {rmin}, amax = {rmax})\\n'\n",
-    "# # line1 = f'dust, weight: {dust[:-3]}, {wt_a}; {dust2[:-3]}, {wt_b}; {dust3[:-3]}, {wt_c}\\n'\n",
-    "line2 = ' lambda \\t <C_abs>/v \\t <C_sca>/v\\n'\n",
-    "\n",
-    "f = open(dust[:-3]+disname+'.dat', 'w')\n",
-    "# f.write(line0)\n",
-    "# f.write(line1)\n",
-    "f.write(line2)\n",
-    "# # f.write(str(output))\n",
-    "\n",
-    "\n",
-    "for i in range(len(output)):\n",
-    "    f.write(f\"{output[i,0]} \\t {output[i,1]} \\t {output[i,2]}\\n\")\n",
-    "\n",
-    "\n",
-    "f.close()\n"
-   ]
   },
   {
    "cell_type": "code",
@@ -586,181 +412,6 @@
     "ax.plot(lam_old, csa_old, label='old')\n",
     "# ax.plot(wavelen, np.array((cabs_ercde)), label='ERCDE')\n",
     "ax.legend()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "312c3d18",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This took 0.7805263996124268 seconds to run\n"
-     ]
-    }
-   ],
-   "source": [
-    "# aa = time.time()\n",
-    "# cabs_cde = []\n",
-    "# for j in range(len(m)):\n",
-    "#     def f(l1, l2, n=m[j], dis_name='CDE'):\n",
-    "#         b = 1/(n**2 - 1)\n",
-    "#         term1 = 1/3 * 1/(b + l1)\n",
-    "#         term2 = 1/3 * 1/(b + l2)\n",
-    "#         term3 = 1/3 * 1/(b + 1 - l1 - l2)\n",
-    "#         # r = np.real((term1 + term2 + term3)*probability(dis_name, l1, l2))\n",
-    "#         j = np.imag((term1 + term2 + term3)*probability(dis_name, l1, l2))\n",
-    "#         return j\n",
-    "#         # return np.real((term1 + term2 + term3)*probability(dis_name, l1, l2)) + np.imag((term1 + term2 + term3)*probability(dis_name, l1, l2))\n",
-    "#     cabs_cde.append(spit.nquad(f, [bounds_l2, bounds_l1])[0])\n",
-    "# kappa_cde = np.array((cabs_cde))\n",
-    "# kappa_cde *= (2 * np.pi / (wavelen)) * v_avg\n",
-    "\n",
-    "# bb = time.time()\n",
-    "# print('This took {} seconds to run'.format(bb-aa))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "17a3e30c",
-   "metadata": {},
-   "source": [
-    "### Same as above, using CDE2 distribution"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "7dbce244",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This took 57.84627676010132 seconds to run\n"
-     ]
-    }
-   ],
-   "source": [
-    "# aa = time.time()\n",
-    "# cabs_cde2 = []\n",
-    "# for j in range(len(m)):\n",
-    "#     def f(l1, l2, n=m[j], dis_name='CDE2'):\n",
-    "#         b = 1/(n**2 - 1)\n",
-    "#         term1 = 1/3 * 1/(b + l1)\n",
-    "#         term2 = 1/3 * 1/(b + l2)\n",
-    "#         term3 = 1/3 * 1/(b + 1 - l1 - l2)\n",
-    "#         # r = np.real((term1 + term2 + term3)*probability(dis_name, l1, l2))\n",
-    "#         j = np.imag((term1 + term2 + term3)*probability(dis_name, l1, l2))\n",
-    "#         return j\n",
-    "#         # return np.real((term1 + term2 + term3)*probability(dis_name, l1, l2)) + np.imag((term1 + term2 + term3)*probability(dis_name, l1, l2))\n",
-    "#     cabs_cde2.append(spit.nquad(f, [bounds_l2, bounds_l1])[0])\n",
-    "\n",
-    "# kappa_cde2 = np.array((cabs_cde2))\n",
-    "# kappa_cde2 *= (2 * np.pi / (1e-4*wavelen)) * v_avg\n",
-    "# bb = time.time()\n",
-    "# print('This took {} seconds to run'.format(bb-aa))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "163bc5de",
-   "metadata": {},
-   "source": [
-    "### Same as above, using ERCDE distribution"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "880bba20",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This took 65.09752011299133 seconds to run\n"
-     ]
-    }
-   ],
-   "source": [
-    "# aa = time.time()\n",
-    "# cabs_ercde = []\n",
-    "# for j in range(len(m)):\n",
-    "#     def f(l1, l2, n=m[j], dis_name='ERCDE'):\n",
-    "#         b = 1/(n**2 - 1)\n",
-    "#         term1 = 1/3 * 1/(b + l1)\n",
-    "#         term2 = 1/3 * 1/(b + l2)\n",
-    "#         term3 = 1/3 * 1/(b + 1 - l1 - l2)\n",
-    "#         # r = np.real((term1 + term2 + term3)*probability(dis_name, l1, l2))\n",
-    "#         j = np.imag((term1 + term2 + term3)*probability(dis_name, l1, l2))\n",
-    "#         return j\n",
-    "#         # return np.real((term1 + term2 + term3)*probability(dis_name, l1, l2)) + np.imag((term1 + term2 + term3)*probability(dis_name, l1, l2))\n",
-    "#     cabs_ercde.append(spit.nquad(f, [bounds_l2, bounds_l1])[0])\n",
-    "\n",
-    "# kappa_ercde = np.array((cabs_ercde))\n",
-    "# kappa_ercde *= (2 * np.pi / (1e-4*wavelen)) * v_avg\n",
-    "# bb = time.time()\n",
-    "# print('This took {} seconds to run'.format(bb-aa))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "deaba678",
-   "metadata": {},
-   "source": [
-    "### Spheres only"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "8e00c618",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# cabs_spheres_sildl = []\n",
-    "# for j in range(len(m)):\n",
-    "#     cabs_spheres_sildl.append((2 * np.pi / (wavelen[j]))*v_avg*np.imag(3*(m[j]**2 - 1)/(m[j]**2 + 2)))\n",
-    "# cabs_sph_array_sildl = np.array((cabs_spheres_sildl))\n",
-    "# cabs_sph_array_sildl"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "e3c01a3b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# cabs_spheres_grph = []\n",
-    "# for j in range(len(m)):\n",
-    "#     cabs_spheres_grph.append((2 * np.pi / (wavelen[j]))*v_avg*np.imag(3*(m[j]**2 - 1)/(m[j]**2 + 2)))\n",
-    "# cabs_sph_array_grph = np.array((cabs_spheres_grph))\n",
-    "# cabs_spheres_grph"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "0bb51bb2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello world\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('hello world')"
    ]
   },
   {
